--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,6 +10,10 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
 		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+		<meta
+			name="viewport"
+			content="width=device-width, initial-scale=1, user-scalable=0, maximum-scale=1, minimum-scale=1"
+		/>
 		<link
 			rel="stylesheet"
 			href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
